<resources>
    <string name="app_name">Helfy</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="register_here">Register Here</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="tologin">Login</string>
    <string name="credentials">Enter Credentials</string>
    <string name="notconnected">Not Connected To Internet</string>
    <string name="connected">Connected to Internet</string>
    <string name="shortpassword">Password must have 6 Characters</string>
    <string name="helfytext">Helfy</string>
    <string name="tagline">Make the most of your givings!</string>
    <string name="splashtext1">Got Some Used stuff?</string>
    <string name="next">Next</string>
<<<<<<< Updated upstream
    <string name="title_activity_maps">Map</string>
=======
    <string name="minimum_password">Minmum length should be 6</string>
    <string name="minimumpassword">minimum length</string>
    <string name="auth_failed">connection failed</string>
    <string name="back_to_login">Back to login</string>
    <string name="err_msg_required">Give proper input</string>
    <string name="clothes">Clothes</string>
    <string name="stationery">Stationery</string>
    <string name="bookshelf">bookshelf</string>
    <string name="furniture">furniture</string>
    <string name="Gadgets">Gadgets</string>
    <string name="Games">Games</string>
    <string name="helfy">Helfy</string>
    <string name="tag">Make the Most of your givings</string>
    <string name="donate">Donate</string>
    <string name="rewards">Rewards</string>
    <string name="locate">Locate</string>
    <string name="location">Location</string>
    <string name="Pickuponmap">Pick Up on Map</string>
>>>>>>> Stashed changes
</resources>
