<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rinks.splash.MainActivity"
    android:background="@drawable/loginbackground">

   <LinearLayout
       android:id="@+id/headerlayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="40sp"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/login"
           android:textAlignment="center"
           android:textStyle="bold"
           android:textSize="25sp"
           android:textColor="#000000"/>
   </LinearLayout>

    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/round"
            android:padding="15sp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:layout_marginTop="30sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:maxLength="50"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:background="@drawable/round"
            android:padding="15sp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:layout_marginTop="30sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPanel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/toregister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_here"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            android:onClick="RegisterButtonClick"
            android:background="@drawable/round"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="LoginButtonClick"
            android:background="@drawable/round"
            android:textColor="#000000"/>

    </LinearLayout>

</RelativeLayout>

