<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rinks.splash.Register"
    android:background="@drawable/loginbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerlayout"
        android:orientation="vertical"
        android:padding="40sp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/headerlayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:background="@drawable/round"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="30sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:background="@drawable/round"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="30sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:background="@drawable/round"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"/>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="30sp"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="10"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:background="@drawable/round"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"/>

        </LinearLayout>

    <!-- <LinearLayout
          android:id="@+id/tologincontainer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/container"
          android:background="@drawable/disabled">

          <Button
              android:id="@+id/tologin"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/tologin"
              android:textColor="#000000"
              android:textSize="12sp"
              android:textStyle="bold"
              android:background="@drawable/round"/>

          </LinearLayout>

          -->




      <LinearLayout
          android:id="@+id/container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_margin="10sp">

          <Button
              android:id="@+id/register"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/register"
              android:textColor="#000000"
              android:textSize="17sp"
              android:textStyle="bold"
              android:background="@drawable/round"/>

      </LinearLayout>



  </RelativeLayout>
